--- a/pycode/Pipfile
+++ b/pycode/Pipfile
@@ -5,7 +5,7 @@ name = "pypi"
 
 [packages]
 langchain = "==0.0.352"
-langchain-openai = "==0.1.6"
+#langchain-openai = "==0.1.6"
 openai = "==0.27.8"
 python-dotenv = "==1.0.0"
 
