--- a/tchat/Pipfile
+++ b/tchat/Pipfile
@@ -5,7 +5,8 @@ name = "pypi"
 
 [packages]
 langchain = "==0.0.352"
-openai = "==0.27.8"
+#openai = "==0.27.8"
+langchain-openai = "==0.1.6"
 python-dotenv = "==1.0.0"
 
 [dev-packages]
