--- a/facts/Pipfile
+++ b/facts/Pipfile
@@ -5,8 +5,7 @@ name = "pypi"
 
 [packages]
 langchain = "==0.0.352"
-#openai = "==0.27.8"
-langchain-openai = "*"
+openai = "==0.27.8"
 python-dotenv = "==1.0.0"
 tiktoken = "*"
 chromadb = "*"
