--- a/pdf/Pipfile
+++ b/pdf/Pipfile
@@ -19,7 +19,7 @@ invoke = "==2.2.0"
 pinecone-client = "==3.2.2"
 pypdf = "==3.15.4"
 watchdog = "==3.0.0"
-tiktoken = "==0.4.0"
+tiktoken = "*" # ==0.4.0
 uuid = "==1.30"
 langfuse = "==1.0.18"
 backoff = "==2.2.1"
